changing slogan for workflow testing purposes

--- a/config/system.site.yml
+++ b/config/system.site.yml
@@ -1,7 +1,7 @@
 uuid: 7e643787-30d4-4cd1-be81-2c59b74168c9
 name: edutrip-dev
 mail: kearon@mcnicol.cc
-slogan: ''
+slogan: 'Because business is always personal...'
 page:
   403: ''
   404: ''
